--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,111 @@
 {% extends "templates/base.html" %}
 {% block content %} 
-	<p>
-		About Me.</p>
+<div class="container">
+  <div class="row">
+<div class="col-md-6 col-md-offset-3">
+	
+  <h1 class="welcome"> Creativity. Passion. Determination.</h1>
+
+  
+
+  <p class="elaboration">
+	Hi there! My name is Kate. I am a first-year Master's student in the University of Michigan School of Information. I am interested in exploring non-profits as spaces in which technology and people meet. In particular, I am excited to see how data science can be applied to social services, particularly healthcare.</p>
+
+  <p class="elaboration">See the world through my eyes; browse the images below!</p>
+</div>
+</div>
+</div>
+
+
+
+
+
+
+
+		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="static/girl.jpg" alt="girl">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="static/peace.jpg" alt="peace">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+    <div class="item">
+      <img src="static/umma.jpg" alt="umma">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+        <div class="item">
+      <img src="static/fall.jpg" alt="fall">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+        <div class="item">
+      <img src="static/sugar.jpg" alt="sugar">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+            <div class="item">
+      <img src="static/inthepark.jpg" alt="inthepark">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+                <div class="item">
+      <img src="static/princeton.jpg" alt="princeton">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+
+                <div class="item">
+      <img src="static/squash.jpg" alt="squash">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+
+
+                <div class="item">
+      <img src="static/washington.jpg" alt="washington">
+      <div class="carousel-caption">
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 
 {%endblock%}
