--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,10 +3,25 @@
 	<p>
 		Contact Me.</p>
 
-			<p>{{hint}}</p>
 	<form method="post" action="/contact.html">
-<p>Enter Username: <input type="text" name="username"/></p>
+<div>
+	<label for="name">Name:</label>
+	<input type="text" id="name" name="user_name" />
+</div>
+<div>
+	<label for="mail">Email:</label>
+	<input type="email" id="mail" name="user_email" />
+</div>
+<div>
+	<label for="msg">Message:</label>
+	<textarea id="msg" name="user_message"></textarea>
+</div>
+<div class="button">
+	<button type="submit">Send</button>
+</div>
+
+<!-- <p>Enter Username: <input type="text" name="username"/></p>
 <p>Enter Password: <input type="text" name="password"/></p>
-<p><input type="submit" value="login"></p>
+<p><input type="submit" value="login"></p> -->
 </form>
 {%endblock%}
