--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,5 +1,22 @@
 {% extends "templates/base.html" %}
 {% block content %} 
-	<p>
-		Resume.</p>
+	<h1 class="resume-text">
+		Click Below for PDF Version</h2>
+
+<!-- <div class="resume">
+<object data="static/KateBarronResume.pdf" type="application/pdf" width="100%" height="200%">
+ 
+  <p>It appears you don't have a PDF plugin for this browser.
+  No biggie... you can <a href="myfile.pdf">click here to
+  download the PDF file.</a></p>
+  
+</object>
+</div> -->
+
+<a href="static/KateBarronResume.pdf" download>
+
+<img class="resume" src="static/KateBarronResume.jpg" alt="Resume">
+
+
+	</a>
 {%endblock%}
